--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@react-google-maps/api": "^1.7.14",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
