--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/dialog": "^0.6.2",
     "@react-google-maps/api": "^1.7.14",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
