--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reach/dialog": "^0.6.2",
     "@react-google-maps/api": "^1.7.14",
+    "isomorphic-unfetch": "^3.0.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
