--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +37,17 @@
     ]
   },
   "devDependencies": {
-    "react-snap": "^1.23.0"
+    "react-snapshot": "^1.3.0"
+  },
+  "reactSnapshot": {
+    "include": [
+      "/",
+      "/feedback"
+    ],
+    "exclude": [
+      "/services",
+      "/services/**"
+    ],
+    "snapshotDelay": 300
   }
 }
