--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dev": "react-scripts start",
     "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,17 +38,13 @@
     ]
   },
   "devDependencies": {
-    "react-snapshot": "^1.3.0"
+    "react-snap": "^1.23.0"
   },
-  "reactSnapshot": {
+  "reactSnap": {
+    "crawl": false,
     "include": [
       "/",
       "/feedback"
-    ],
-    "exclude": [
-      "/services",
-      "/services/**"
-    ],
-    "snapshotDelay": 300
+    ]
   }
 }
