--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,17 +34,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-snap": "^1.23.0"
-  },
-  "reactSnap": {
-    "skipThirdPartyRequests": true,
-    "include": [
-      "/",
-      "/feedback",
-      "/services"
     ]
   }
 }
